--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -56,9 +56,9 @@
           <button class="greetNameButton" type="submit" name="button">
             Greet me
           </button>
-          <button class="resetNameButton" type="button" name="button">
+          {{!-- <button class="resetNameButton" type="button" name="button">
             Reset
-          </button>
+          </button> --}}
         </div>
         </form>
       </div>
