added connection to database

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- ... -->
-  <body>
+<!-- ... -->
+<body>
     <div class="box">
       <div class="heading">
         <h1>Greeting</h1>
@@ -9,58 +9,41 @@
       <div class="name-input">
         <p class="message warning center"></p>
         <form action="/greetings" method="POST">
-        <div class="enter">
-          <label for="name-area" id="Name">Name</label>
-          
-            <input
-              type="text"
-              name="name"
-              value=""
-              placeholder="enter your name "
-              class="name-area"
-            />
-            <span id="NameGreetingCount">Greetings</span
-            ><span class="numGreetings">{{counter}}</span>
-        </div>
-        <p class="message2 warning center"></p>
-        <div class="langs">
-          <label class="block">
-            <input
-              type="radio"
-              name="language"
-              class="language"
-              value="Hello"
-            />
-            <span class="label-body">English</span>
-          </label>
-          <label class="block">
-            <input
-              type="radio"
-              name="language"
-              class="language"
-              value="Sawbona"
-            />
-            <span class="label-body">isiZulu</span>
-          </label>
-          <label class="block">
-            <input
-              type="radio"
-              name="language"
-              class="language"
-              value="Molo"
-            />
-            <span class="label-body">isiXhosa</span>
-          </label>
-        </div>
-        <div class="buttons">
-          <button class="greetNameButton" type="submit" name="button">
-            Greet me
-          </button>
-          {{!-- <button class="resetNameButton" type="button" name="button">
-            Reset
-          </button> --}}
-        </div>
+          <div class="enter">
+            <label for="name-area" id="Name">Name</label>
+
+            <input type="text" name="name" value="" placeholder="enter your name " class="name-area" />
+            <span id="NameGreetingCount">Greetings</span><span class="numGreetings">{{counter}}</span>
+          </div>
+          <p class="message2 warning center"></p>
+          <div class="langs">
+            <label class="block">
+              <input type="radio" name="language" class="language" value="Hello" />
+              <span class="label-body">English</span>
+            </label>
+            <label class="block">
+              <input type="radio" name="language" class="language" value="Sawbona" />
+              <span class="label-body">isiZulu</span>
+            </label>
+            <label class="block">
+              <input type="radio" name="language" class="language" value="Molo" />
+              <span class="label-body">isiXhosa</span>
+            </label>
+          </div>
+          <div class="buttons">
+            <button class="greetNameButton" type="submit" name="button">
+              Greet me
+            </button>
+            {{!-- <button class="resetNameButton" type="button" name="button">
+              Reset
+            </button> --}}
+          </div>
         </form>
+          <a href="/greeted">
+            <button class="greetNameButton" type="submit" name="button" id="getName">
+              Greeted names
+            </button>
+          </a>
       </div>
       <p class="resetMessage info center"></p>
       <div class="greeting">
