--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,6 +16,53 @@
     border: 2px solid black;
 
 }
+.container{
+    display: flex;
+    background-color: #003049;
+    width: 100%;
+    height: 100vh;
+    /* align-items: center; */
+    /* justify-content: center; */
+    
+}
+a{
+    text-decoration: none; /* Remove underline */
+    cursor: default;
+    color: aliceblue;
+    font-family: Arial, Helvetica, sans-serif;
+}
+li{
+    list-style: none;
+}
+.listOfNames{
+    
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    /* align-items: center;
+    justify-content: center; */
+}
+.listOfNames>ul>li{
+ list-style: none;
+ padding: 5px 4px;
+ color: antiquewhite;
+ font-family: Arial, Helvetica, sans-serif;
+}
+.listBox{
+    margin: 50px 0px 0px 10px;
+    /* border: 2px solid black; */
+    background-color: rgb(26, 4, 46);
+    width: 300px;
+}
+/* .listBox{
+    border: 2px solid black;
+} */
+.listBoxHeader{
+    /* border: 2px solid black; */
+    background-color: dimgrey;
+    text-align: center;
+
+}
 .enter{
     display: flex;
     flex-direction: column;
@@ -37,6 +84,11 @@
     background-color: blueviolet;
     font-weight: 1000px;
     box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, 0.75)
+}
+#getName{
+    position: fixed;
+    top: 10px;
+    left: 5px;
 }
 .center {
     text-align: center;
