--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -40,8 +40,9 @@
             <button class="greetNameButton" type="submit" name="button">
               Greet me
             </button>
-          </div>
+            </div>
         </form>
+        <div class="buttons">
         <form action="/reset" method="POST">
           <button class="resetNameButton" type="submit" name="button">
             Reset Names
@@ -52,6 +53,8 @@
               Greeted names
             </button>
           </a>
+          </div>
+
       </div>
       <p class="resetMessage info center"></p>
       <div class="greeting">
