--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,11 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    
+
 }
-.box{
+
+.box {
     border: 1px solid black;
     display: flex;
     flex-direction: column;
@@ -16,64 +17,67 @@
     border: 2px solid black;
 
 }
-.container{
+
+.container {
     display: flex;
     background-color: #003049;
     width: 100%;
     height: 100vh;
-    /* align-items: center; */
-    /* justify-content: center; */
-    
+    justify-content: center;
+    align-items: center;
 }
-a{
-    text-decoration: none; /* Remove underline */
+
+a {
+    text-decoration: none;
     cursor: default;
     color: aliceblue;
     font-family: Arial, Helvetica, sans-serif;
 }
-li{
+
+li {
     list-style: none;
 }
-.listOfNames{
-    
+
+.listOfNames {
     width: 100%;
     display: flex;
     flex-direction: column;
-    /* align-items: center;
-    justify-content: center; */
+    align-items: center;
+    justify-content: center;
 }
-.listOfNames>ul>li{
- list-style: none;
- padding: 5px 4px;
- color: antiquewhite;
- font-family: Arial, Helvetica, sans-serif;
+
+.listOfNames>ul>li {
+    list-style: none;
+    padding: 5px 4px;
+    color: antiquewhite;
+    font-family: Arial, Helvetica, sans-serif;
 }
-.listBox{
+
+.listBox {
     margin: 50px 0px 0px 10px;
-    /* border: 2px solid black; */
     background-color: rgb(26, 4, 46);
     width: 300px;
 }
-/* .listBox{
-    border: 2px solid black;
-} */
-.listBoxHeader{
-    /* border: 2px solid black; */
+
+.listBoxHeader {
     background-color: dimgrey;
     text-align: center;
 
 }
-.enter{
+
+.enter {
     display: flex;
     flex-direction: column;
     gap: 20px;
     align-items: center;
 
-} 
-.numGreetings{
+}
+
+.numGreetings {
     padding-left: 3px;
 }
-.heading{
+
+.heading {
     border: 1px solid black;
     align-items: center;
     justify-content: center;
@@ -85,24 +89,28 @@ li{
     font-weight: 1000px;
     box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, 0.75)
 }
-#getName{
+
+/* #getName{
     position: fixed;
     top: 10px;
     left: 5px;
-}
+} */
 .center {
     text-align: center;
     margin-left: auto;
     margin-right: auto;
-  }
-.name-input{
+}
+
+.name-input {
     display: block;
     place-items: center;
 }
-.name-area{
+
+.name-area {
     padding: 9px;
 }
-.langs{
+
+.langs {
     margin-top: 20px;
     display: flex;
     gap: 25px;
@@ -110,68 +118,78 @@ li{
     justify-content: center;
     margin-bottom: 20px;
 }
-.block{
+
+.block {
     display: flex;
     flex-direction: column;
-} 
-.buttons{
+}
+
+.buttons {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-bottom: 5px;
 }
-.greetNameButton{
+
+.greetNameButton {
     margin-top: 5px;
     padding: 9px;
     background-color: springgreen;
     border-radius: 6px;
     display: flex;
     align-items: center;
-    min-width:85px;
+    min-width: 85px;
 }
-.resetNameButton{
+
+.resetNameButton {
     margin-top: 5px;
     padding: 9px;
     background-color: springgreen;
     border-radius: 6px;
     align-items: center;
-    min-width:85px;
-    position: fixed;
-    top: 10px;
-    right: 5px;
+    min-width: 85px;
 }
-.greeting{
+
+.greeting {
     margin-top: 20px;
 }
-.warning{
+
+.warning {
     color: #d62828;
     margin-bottom: 15px;
     margin-top: 15px;
     font-size: small;
 }
-.info{
+
+.info {
     color: green;
     margin-bottom: 15px;
     margin-top: 15px;
     font-size: small;
 }
-.greetNameButton:hover, .resetNameButton:hover{
-    background-color:rgb(0, 65, 32) ;
+
+.greetNameButton:hover,
+.resetNameButton:hover {
+    background-color: rgb(0, 65, 32);
 }
-@media (min-width: 760px){
-   
-    .heading{
-       display: flex;
-       width: 350px;
-    
+
+@media (min-width: 760px) {
+
+    .heading {
+        display: flex;
+        width: 350px;
+
     }
-    .enter{
+
+    .enter {
         display: flex;
         flex-direction: column;
         gap: 20px;
         align-items: center;
 
-    } 
-    .langs{
+    }
+
+    .langs {
         margin-top: 50px;
         display: flex;
         gap: 50px;
@@ -180,43 +198,53 @@ li{
         margin-bottom: 20px;
         width: 500px;
     }
+
     #Name {
         text-align: center;
         margin-left: auto;
         margin-right: auto;
         font-size: 25px;
     }
-    #NameGreetingCount, .numGreetings{
+
+    #NameGreetingCount,
+    .numGreetings {
         text-align: center;
         margin-left: auto;
         margin-right: auto;
         font-size: 25px;
     }
-    .name-area{
-        width:50%;
+
+    .name-area {
+        width: 50%;
     }
-    .buttons{
+
+    .buttons {
         display: flex;
         align-items: center;
         justify-content: center;
         gap: 50px;
     }
-    .label-body{
+
+    .label-body {
         font-size: 25px;
     }
-    .outputGreeting, .outputName{
+
+    .outputGreeting,
+    .outputName {
         font-size: 25px;
     }
-    .warning{
+
+    .warning {
         color: #d62828;
         margin-bottom: 15px;
         margin-top: 15px;
         font-size: medium;
     }
-    .info{
+
+    .info {
         color: green;
         margin-bottom: 15px;
         margin-top: 15px;
         font-size: medium;
-}
+    }
 }
